--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span></button>
 				<a class="navbar-brand" href="#"><span>My</span>Park</a>
+				<div class="sus-log">
+					<a href="login.html">Login in</a>
+					<a href="#">Register</a>
+				</div>
 				<ul class="nav navbar-top-links navbar-right">
+
 					<li class="dropdown"><a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
 						<em class="fa fa-envelope"></em><span class="label label-danger">15</span>
 					</a>
@@ -77,11 +82,12 @@
 							</a></li>
 						</ul>
 					</li>
+
 				</ul>
 			</div>
 		</div><!-- /.container-fluid -->
 	</nav>
-	<div id="sidebar-collapse" class="col-sm-3 col-lg-2 sidebar" style="display:none;">
+	<div id="sidebar-collapse" class="col-sm-3 col-lg-2 sidebar" style="">
 		<div class="profile-sidebar">
 			<div class="profile-userpic">
 				<img src="http://placehold.it/50/30a5ff/fff" class="img-responsive" alt="">
@@ -123,7 +129,7 @@
 		</ul>
 	</div><!--/.sidebar-->
 		
-	<div class="col-sm-12 col-lg-12  main">
+	<div class="col-sm-10 col-lg-offset-2  main">
 		<div class="row">
 			<ol class="breadcrumb">
 				<li><a href="#">
