--- a/createprofile.html
+++ b/createprofile.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Login</title>
+    <title>Create profile</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/datepicker3.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
@@ -25,19 +25,19 @@
     <div class="row">
         <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-4">
             <div class="login-panel panel panel-default">
-                <div class="panel-heading">Log in</div>
+                <div class="panel-heading">Create profile</div>
                 <div class="panel-body">
                     <form role="form">
                         <div class="form-group">
                             <p id="formResponse" class="text-danger"></p>
                         </div>
                         <div class="form-group">
-                            <input id="email" class="form-control" placeholder="E-mail" name="email" type="email" autofocus="">
+                            <input id="name" class="form-control" placeholder="Name" name="name" type="text">
                         </div>
                         <div class="form-group">
-                            <input id="password" class="form-control" placeholder="Password" name="password" type="password" value="">
+                            <input id="phone" class="form-control" placeholder="Phone number" name="phone" type="text">
                         </div>
-                        <a id="btnLogin" href="#" class="btn btn-primary">Login</a>
+                        <a id="btnCreateProfile" href="#" class="btn btn-primary">Create</a>
                     </form>
                 </div>
             </div>
@@ -51,14 +51,12 @@
     <script src="js/api.js"></script>
 
     <script>
-        $("#btnLogin").click(function() {
-            callEndpoint(API_ROOT + "/identity/login", "POST", {
-                email: $("#email").val(),
-                password: $("#password").val(),
+        $("#btnCreateProfile").click(function() {
+            callEndpoint(API_ROOT + "/users", "POST", {
+                name: $("#name").val(),
+                phoneNumber: $("#phone").val(),
             }, function(data) {
                 console.log(data);
-                sessionStorage.setItem("Token", data.token);
-
                 window.location.href = 'index.html';
             }, function(status) {
                 $("#formResponse").text("Incorrect login");
