--- a/register.html
+++ b/register.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Login</title>
+    <title>Register</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/datepicker3.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
@@ -25,7 +25,7 @@
     <div class="row">
         <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-4">
             <div class="login-panel panel panel-default">
-                <div class="panel-heading">Log in</div>
+                <div class="panel-heading">Register</div>
                 <div class="panel-body">
                     <form role="form">
                         <div class="form-group">
@@ -37,7 +37,7 @@
                         <div class="form-group">
                             <input id="password" class="form-control" placeholder="Password" name="password" type="password" value="">
                         </div>
-                        <a id="btnLogin" href="#" class="btn btn-primary">Login</a>
+                        <a id="btnRegister" href="#" class="btn btn-primary">Register</a>
                     </form>
                 </div>
             </div>
@@ -51,15 +51,15 @@
     <script src="js/api.js"></script>
 
     <script>
-        $("#btnLogin").click(function() {
-            callEndpoint(API_ROOT + "/identity/login", "POST", {
+        $("#btnRegister").click(function() {
+            callEndpoint(API_ROOT + "/identity/register", "POST", {
                 email: $("#email").val(),
                 password: $("#password").val(),
             }, function(data) {
                 console.log(data);
                 sessionStorage.setItem("Token", data.token);
 
-                window.location.href = 'index.html';
+                window.location.href = 'createprofile.html';
             }, function(status) {
                 $("#formResponse").text("Incorrect login");
             });
