--- a/index.html
+++ b/index.html
@@ -177,62 +177,7 @@
             <div class="col-lg-12">
 
                 <div id="map" style="height: 500px;width: 100%;"></div>
-                <script>
-                    var map;
-                    var myLatLng = {
-                        lat: 44.4376973,
-                        lng: 26.0245962
-                    };
-                    var myLatLng1 = {
-                        lat: 44.4286973,
-                        lng: 26.0245962
-                    };
-
-                    function addMarker(location, map, name) {
-                        var marker = new google.maps.Marker({
-                            position: location,
-                            title: name,
-                            map: map,
-                            icon: 'img/parking-pin.png'
-                        });
-
-                        google.maps.event.addListener(marker, 'click', function() {
-
-                            alert(marker.title);
-                        });
-                    }
-
-
-
-                    function initMap() {
-                        map = new google.maps.Map(document.getElementById('map'), {
-                            center: {
-                                lat: 44.4376973,
-                                lng: 26.0245962
-                            },
-                            zoom: 12,
-                            styles: [{
-                                "featureType": "road.highway",
-                                "stylers": [{
-                                    "color": "#30a5ff"
-                                }]
-                            }]
-                        });
-
-
-                        addMarker(myLatLng, map, "strada elevului, parcare 21");
-                        addMarker(myLatLng1, map, "Strada Leaota, parcare 32");
-
-                        google.maps.event.addListener(
-                            marker,
-                            "click",
-                            function(e) {
-                                alert('click');
-                            }
-                        );
-
-                    }
-                </script>
+                
                 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCFZsJtUTzmiRxf68yj1abK1tMyyLUS3tA&callback=initMap" async defer></script>
 
             </div>
@@ -260,6 +205,90 @@
                 scaleFontColor: "#c5c7cc"
             });
         };
+    </script>
+
+<script>
+    var map;
+    var myLatLng = {
+        lat: 44.4376973,
+        lng: 26.0245962
+    };
+    var myLatLng1 = {
+        lat: 44.4286973,
+        lng: 26.0245962
+    };
+
+    function addMarker(location, map, name) {
+        var marker = new google.maps.Marker({
+            position: location,
+            title: name,
+            map: map,
+            icon: 'img/parking-pin.png'
+        });
+
+        google.maps.event.addListener(marker, 'click', function() {
+
+            alert(marker.title);
+        });
+    }
+
+    function addMarkerAuto(id , latt, longg, map, name) {
+        var marker = new google.maps.Marker({
+            position: {
+                lat: latt,
+                lng: longg
+            },
+            title: name,
+            map: map,
+            icon: 'img/parking-pin.png'
+        });
+
+        var Id = id;
+
+        google.maps.event.addListener(marker, 'click', function() {
+
+            alert(Id);
+        });
+    }
+
+    function initMap() {
+        map = new google.maps.Map(document.getElementById('map'), {
+            center: {
+                lat: 44.4376973,
+                lng: 26.0245962
+            },
+            zoom: 12,
+            styles: [{
+                "featureType": "road.highway",
+                "stylers": [{
+                    "color": "#30a5ff"
+                }]
+            }]
+        });
+
+        google.maps.event.addListener(
+            marker,
+            "click",
+            function(e) {
+                alert('click');
+            }
+        );
+    }
+</script>
+
+    <script src="js/api.js"></script>
+
+    <script type="text/javascript">
+         $(document).ready(function() {
+            callEndpoint(API_ROOT + "/parkingSlots", "GET",null, function(data) {
+                console.log(data);
+
+                data.forEach(AddMarkMet);
+                function AddMarkMet(item) {
+                    addMarkerAuto(item.id, item.latitude,item.longitude, map, item.name);
+                }
+            }, null);
+        });
     </script>
 
 </body>
