adaugat pagina profil

--- a/layout.html
+++ b/layout.html
@@ -51,7 +51,8 @@
         </div>
         <div class="divider"></div>
         <ul class="nav menu">
-            <li><a href="#" onclick="loadPage('login.html');"><em class="fa fa-dashboard">&nbsp;</em> Dashboard</a></li>
+            <li><a href="#" onclick="loadPage('profile.html');"><em class="fa fa-user">&nbsp;</em> Profile</a></li>
+            <li><a href="#" onclick="loadPage('parkingslots.html');"><em class="fa fa-table">&nbsp;</em> Parking Slots</a></li>
             <li><a href="#" onclick="logOut()"><em class="fa fa-power-off">&nbsp;</em> Logout</a></li>
         </ul>
     </div>
