--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/datepicker3.css" rel="stylesheet">
+    <link href="css/bootstrap-datetimepicker.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
-
     <!--Custom Font-->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
     <!--[if lt IE 9]>
@@ -54,6 +54,7 @@
             <li><a href="#" onclick="loadPage('profile.html');"><em class="fa fa-user">&nbsp;</em> Profile</a></li>
             <li><a href="#" onclick="loadPage('parkingslots.html');"><em class="fa fa-table">&nbsp;</em> Parking Slots</a></li>
             <li><a href="#" onclick="loadPage('map.html');"><em class="fa fa-map">&nbsp;</em> Map</a></li>
+            <li><a href="#" onclick="loadPage('issues.html');"><em class="fa fa-exclamation-triangle">&nbsp;</em> Issues</a></li>
             <li><a href="#" onclick="logOut()"><em class="fa fa-power-off">&nbsp;</em> Logout</a></li>
         </ul>
     </div>
@@ -68,6 +69,9 @@
     <script src="js/easypiechart.js"></script>
     <script src="js/easypiechart-data.js"></script>
     <script src="js/bootstrap-datepicker.js"></script>
+    <script src="js/bootstrap-datetimepicker.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.js"></script>
+    <script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
     <script src="js/custom.js"></script>
     <script src="js/api.js"></script>
 
