--- a/parkingslots.html
+++ b/parkingslots.html
@@ -2,11 +2,53 @@
     <div class="row">
         <div class="col-lg-12">
             <div class="panel panel-default">
-                <div class="panel-heading">Parking Slots</div>
+                <div class="panel-heading">Parking Slots
+                    <span id="btnParkingSlotSlide" class="pull-right clickable panel-toggle panel-button-tab-left"><em class="fa fa-toggle-up"></em></span>
+                </div>
                 <div class="panel-body">
-
+                    <button id="btnAddParkingSlot" type="button" class="pull-right btn btn-primary">Add</button>
+                    <table id="parkingSlotTable" class="table table-hover">
+                        <thead>
+                            <tr>
+                                <th>Name</th>
+                                <th>Identificator</th>
+                                <th>Active</th>
+                                <th></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
+<div id="parkingSlotContent"></div>
+
+<script>
+    $(document).ready(function() {
+        callEndpoint(API_ROOT + "/parkingSlots", "GET", null, function(data) {
+            console.log(data);
+            data.forEach(p => $('#parkingSlotTable tr:last').after(
+                `<tr>
+                    <td>${p.name}</td>
+                    <td>${p.identificator}</td>
+                    <td>${p.active}</td>
+                    <td><button type="button" class="btn btn-primary" onclick="loadDetails('${p.id}')">Details</button></td>
+                </tr>`));
+        }, function() {});
+    });
+
+    function loadDetails(id) {
+        sessionStorage.setItem("ParkingSlotId", id);
+        $("#btnParkingSlotSlide").click();
+        $("#parkingSlotContent").load("editparkingslot.html");
+    }
+
+    $("#btnAddParkingSlot").click(function() {
+        $("#btnParkingSlotSlide").click();
+        $("#parkingSlotContent").load("addparkingslot.html");
+    });
+</script>
