--- a/issues.html
+++ b/issues.html
@@ -4,45 +4,16 @@
             <div class="panel panel-default">
                 <div class="panel-heading">Issues</div>
                 <div class="panel-body">
-                    <table id="example" class="display" style="width:100%">
+                    <table id="issuesTable" class="table table-hover">
                         <thead>
                             <tr>
-                                <th>Name</th>
-                                <th>Position</th>
-                                <th>Office</th>
-                                <th>Age</th>
-                                <th>Start date</th>
-                                <th>Salary</th>
+                                <th>Booking Id</th>
+                                <th>Date time</th>
+                                <th>Details</th>
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td>Tiger Nixon</td>
-                                <td>System Architect</td>
-                                <td>Edinburgh</td>
-                                <td>61</td>
-                                <td>2011/04/25</td>
-                                <td>$320,800</td>
-                            </tr>
-                            <tr>
-                                <td>Donna Snider</td>
-                                <td>Customer Support</td>
-                                <td>New York</td>
-                                <td>27</td>
-                                <td>2011/01/25</td>
-                                <td>$112,000</td>
-                            </tr>
                         </tbody>
-                        <tfoot>
-                            <tr>
-                                <th>Name</th>
-                                <th>Position</th>
-                                <th>Office</th>
-                                <th>Age</th>
-                                <th>Start date</th>
-                                <th>Salary</th>
-                            </tr>
-                        </tfoot>
                     </table>
                 </div>
             </div>
@@ -52,6 +23,14 @@
 
 <script>
     $(document).ready(function() {
-        $('#example').DataTable();
+        callEndpoint(API_ROOT + "/issue", "GET", null, function(data) {
+            console.log(data);
+            data.forEach(p => $('#issuesTable tr:last').after(
+                `<tr>
+                    <td>${p.bookingId}</td>
+                    <td>${p.dateTime}</td>
+                    <td>${p.details}</td>
+                </tr>`));
+        }, function() {});
     });
 </script>
