--- a/map.html
+++ b/map.html
@@ -2,7 +2,9 @@
     <div class="row">
         <div class="col-lg-12">
             <div class="panel panel-default">
-                <div class="panel-heading">Find a parking slot</div>
+                <div class="panel-heading">Find a parking slot
+                    <span id="btnMapSlide" class="pull-right clickable panel-toggle panel-button-tab-left"><em class="fa fa-toggle-up"></em></span>
+                </div>
                 <div class="panel-body">
                     <div id="map" style="height: 500px;width: 100%;"></div>
                 </div>
@@ -10,6 +12,9 @@
         </div>
     </div>
 </div>
+
+<div id="bookingParkingSlot"></div>
+<div id="ParkingSlotId"></div>
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCFZsJtUTzmiRxf68yj1abK1tMyyLUS3tA&callback=initMap" async defer></script>
 
@@ -38,6 +43,8 @@
         });
     }
 
+    var nowID;
+
     function addMarkerAuto(id, latt, longg, map, name, price) {
         var marker = new google.maps.Marker({
             position: {
@@ -53,7 +60,10 @@
 
         google.maps.event.addListener(marker, 'click', function() {
 
-            alert(Id);
+            $("#btnMapSlide").click();
+            nowID = Id;
+            $("#bookingParkingSlot").load("bookingParkingSlot.html");
+            
         });
 
         var infowindow = new google.maps.InfoWindow();
