--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <ul class="nav menu">
             <li><a href="#" onclick="loadPage('profile.html');"><em class="fa fa-user">&nbsp;</em> Profile</a></li>
             <li><a href="#" onclick="loadPage('parkingslots.html');"><em class="fa fa-table">&nbsp;</em> Parking Slots</a></li>
-            <li><a href="#" onclick="loadPage('map.html');"><em class="fa fa-map">&nbsp;</em> Map</a></li>
+            <li><a href="#" onclick="loadPage('map.html');"><em class="fa fa-map-pin">&nbsp;</em> Find a parking slot</a></li>
             <li><a href="#" onclick="loadPage('history.html');"><em class="fa fa-calendar">&nbsp;</em> History</a></li>
             <li><a href="#" onclick="loadPage('issues.html');"><em class="fa fa-exclamation-triangle">&nbsp;</em> Issues</a></li>
             <li><a href="#" onclick="logOut()"><em class="fa fa-power-off">&nbsp;</em> Logout</a></li>
